# trayless

./: Cargo.toml  README.md  flake.nix
libtrayless/: Cargo.toml
libtrayless/src/: dbus.rs  lib.rs  menu_node.rs  tray_item.rs  utils.rs
libtrayless/src/dbus/: StatusNotifierWatcher.xml
src/: cli.rs  daemon.rs  main.rs  tray_item.rs  utils.rs
src/dbus/: StatusNotifierItem.xml  dbusmenu.rs  dbusmenu.xml  status_notifier_item.rs  status_notifier_watcher.rs
src/gui/: window.css  window.rs
trayless/: Cargo.toml
trayless-gtk/: Cargo.toml
trayless-gtk/src/: cli.rs  main.rs  main_window.rs  menu_window.rs  style.css  window.rs
trayless/src/: cli.rs  daemon.rs  main.rs
