[package]
name = "trayless"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
zbus = { version = "5.16.0", features = ["tokio"] }
futures-util = "0.3.32"
