[package]
name = "trayless"
version = "0.1.0"
edition = "2024"

[features]
default = ["gui"]
gui = ["dep:gtk4", "dep:gtk4-layer-shell"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
zbus = { version = "5.16.0", features = ["tokio"] }
futures-util = "0.3.32"
code-docs-rs = "0.2.0"

gtk4 = { version = "0.11.3", optional = true }
gtk4-layer-shell = { version = "0.8.0", optional = true }
