[workspace]
resolver = "3"

members = [
    "trayless",
    "trayless-gtk",
    "libtrayless"
]

[workspace.package]
authors = [ "Sandorex" ]
description = "Sandboxed development containers or VMs at your fingertips"
repository = "https://github.com/sandorex/trayless"
license = "GPL-2.0-or-later"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
zbus = { version = "5.16.0", features = ["tokio"] }
futures-util = "0.3.32"
code-docs-rs = "0.2.0"
gtk4 = { version = "0.11.3" }
gtk4-layer-shell = { version = "0.8.0" }
libtrayless = { path = "libtrayless" }
