[package]
version = "0.1.0"
name = "trayless"
description = "Utility for interacting with and querying tray indicators"

edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
libtrayless.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true
futures-util.workspace = true
code-docs-rs.workspace = true
